# snake_terminal_pub

./: .clangd  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  build-linux.sh  build-windows.bat  build.bat  build.sh  interface.md  pack-linux.sh  pack-windows.bat  pack-windows.evb  pack.bat  pack.sh  snake.cfg
docs/: defense.aux  defense.fdb_latexmk  defense.fls  defense.nav  defense.out  defense.tex  defense.toc  defense.vrb  defense.xdv
src/: app.cpp  config_loader.h  draw_list.h  draw_process.h  event.h  global.h  input_thread.cpp  main.cpp  render.h  render_thread.cpp  snake.h  snake_render.h  sprite.h  utility.h
src/audio/: audiomanager.cpp  audiomanager.h  audiostreamplayer.h
src/audio/backend/: audioloader.cpp  audioloader.h
src/config/: config.h  config_loader.cpp  config_loader.h
src/event/: event.h  input_event.h  quit_event.h  scene_switch_event.h
src/game/: snake.cpp  snake.h  snake_anim.h  snake_render.h
src/game/snake_state/: animate_manager.h
src/render/: draw_list.h  drawlist.h  render.h  sprite.h
src/scene/: config_scene.cpp  config_scene.h  end_scene.cpp  end_scene.h  game_scene.cpp  game_scene.h  menu_scene.cpp  menu_scene.h  scene.h  scene_manager.cpp  scene_manager.h
src/utils/: log.cpp  log.h
tests/: snake_collide_test.cpp
